# ticket-service/docs/swagger.json
@@ -11,6 +11,11 @@
     "paths": {
         "/admin/bookings": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Список всех билетов для администратора",
                 "produces": [
                     "application/json"
@@ -34,6 +39,11 @@
         },
         "/tickets": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Создание нового билета",
                 "consumes": [
                     "application/json"
@@ -69,6 +79,11 @@
         },
         "/tickets/my": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -178,6 +193,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
